kubernetes/memcache.yaml
---
# You can optionally deploy memcache, for the Flux daemon to cache
# container image metadata.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: memcached
  template:
    metadata:
      labels:
        name: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:1.4.25
        imagePullPolicy: IfNotPresent
        args:
        - -m 64    # Maximum memory to use, in megabytes. 64MB is default.
        - -p 11211    # Default port, but being explicit is nice.
        # - -vv    # Uncomment to get logs of each request and response.
        ports:
        - name: clients
          containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: kube-system
spec:
  # The memcache client uses DNS to get a list of memcached servers and then
  # uses a consistent hash of the key to determine which server to pick.
  clusterIP: None
  ports:
    - name: memcached
      port: 11211
  selector:
    name: memcached
