kubernetes/robinyonge-dot-com.yml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "robin"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "robin-dot-com"
  namespace: "robin"
  labels:
    app: "robin-dot-com"
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "robin-dot-com"
  template:
    metadata:
      labels:
        app: "robin-dot-com"
    spec:
      containers:
      - name: "robin-dot-com"
        image: "eu.gcr.io/kube-personal/robin-dot-com:latest"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: robinyonge-dot-com-nodeport
  namespace: "robin"
spec:
  ports:
     -  port: 443
        protocol: TCP
        targetPort: 8000
  selector:
    app: "robin-dot-com"
  type: NodePort
