kubernetes/nice-note.yml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "noteapp"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "nice-note"
  namespace: "noteapp"
  labels:
    app: "nice-note"
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "nice-note"
  template:
    metadata:
      labels:
        app: "nice-note"
    spec:
      containers:
      - name: "nice-note"
        image: "eu.gcr.io/kube-personal/nice-note:latest"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "nice-note-nodeport"
  namespace: "noteapp"
  labels:
    app: "nice-note"
  annotations:
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"my-first-port":"HTTPS","my-second-port":"HTTP"}'
spec:
  ports:
  - name: my-https-port
    port: 443
    targetPort: 8443
  selector:
    app: "nice-note"
  type: "NodePort"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nice-note-np
#   namespace: noteapp
#   annotations:
#     cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
#   labels:
#     app: "nice-note"
# spec:
#   type: NodePort
#   selector:
#     app: "nice-note"
#   ports:
#   - name: my-https-port
#     port: 443
#     targetPort: 8443
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nice-note-ingress
#   namespace: noteapp
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: "nice-note-ip"
#   labels:
#     app: "nice-note"
# spec:
#   backend:
#     serviceName: nice-note-np
#     servicePort: my-https-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nice-note-ingress
  namespace: noteapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # kubernetes.io/ingress.allow-http: "false"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.global-static-ip-name: "nice-note-ip"
  labels:
    app: "nice-note"
spec:
  backend:
    serviceName: nice-note-nodeport
    servicePort: 443
  tls:
  - hosts:
    - notes.robinyonge.com
    secretName: notes-dot-robinyonge-dot-com-crt
  rules:
  - host: notes.robinyonge.com
    http:
      paths:
      - path: /webhook/*
        backend:
          serviceName: nice-note-nodeport
          servicePort: 443
